# grpc-swift-test

./: .bazelrc  Package.resolved  Package.swift  swift_deps.bzl  swift_deps_index.json
examples/xplatform/examples_xplatform_grpc_echo_client/: BUILD.bazel
examples/xplatform/examples_xplatform_grpc_echo_client_services_swift/: BUILD.bazel  echo.grpc.swift
examples/xplatform/examples_xplatform_grpc_echo_client_test_stubs_swift/: BUILD.bazel  echo.grpc.swift
examples/xplatform/examples_xplatform_grpc_echo_client_unit_test/: BUILD.bazel  client_unit_test.swift
examples/xplatform/examples_xplatform_grpc_echo_proto/: BUILD.bazel  echo.pb.swift
examples/xplatform/examples_xplatform_grpc_echo_server/: BUILD.bazel  server_main.swift
examples/xplatform/examples_xplatform_grpc_echo_server_services_swift/: BUILD.bazel  echo.grpc.swift
