load("@build_bazel_rules_swift//swift:swift.bzl", "swift_binary")

swift_binary(
    name = "examples_xplatform_grpc_echo_client",
    srcs = ["client_main.swift"],
    module_name = "examples_xplatform_grpc_echo_client",
    visibility = ["//visibility:public"],
    deps = [
        "//examples/xplatform/examples_xplatform_grpc_echo_client_services_swift",
        "//examples/xplatform/examples_xplatform_grpc_echo_proto",
        "@swiftpkg_grpc_swift//:Sources_GRPC",
    ],
)
