load("@build_bazel_rules_swift//swift:swift.bzl", "swift_library")

swift_library(
    name = "examples_xplatform_grpc_echo_client_services_swift",
    srcs = ["echo.grpc.swift"],
    module_name = "examples_xplatform_grpc_echo_client_services_swift",
    visibility = ["//visibility:public"],
    deps = [
        "//examples/xplatform/examples_xplatform_grpc_echo_proto",
        "@swiftpkg_grpc_swift//:Sources_GRPC",
    ],
)
