load("@build_bazel_rules_swift//swift:swift.bzl", "swift_binary")

swift_binary(
    name = "examples_xplatform_grpc_echo_server",
    copts = [
        "-j2",
        "-swift-version",
        "5",
    ],
    srcs = ["server_main.swift"],
    module_name = "examples_xplatform_grpc_echo_server",
    visibility = ["//visibility:public"],
    deps = [
        "//examples/xplatform/examples_xplatform_grpc_echo_proto",
        "//examples/xplatform/examples_xplatform_grpc_echo_server_services_swift",
        "@swiftpkg_grpc_swift//:Sources_GRPC",
    ],
)
